# NHDS

./: .gitignore  COPYING  LICENSE  Makefile  Makefile.in  README  README.md  configure  configure.ac  example_parameters.in  kaw  kaw.in  kth_kawtc  parameters.in  whistler.in
.github/workflows/: test.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: 1modules.f90  Makefile  Makefile.am  Makefile.in  NHDS.f90  NHDS_with_hdf5.f90  calc_polarization.f90  calc_xi.f90  dispfunct.f90  disptensor.f90  example_parameters.in  hdf5.mod  newton_method.f90  parameters.f90  suscep.f90  waveenergy.f90  write_delta_f.f90
